[tool.poetry]
name = "parley"
version = "0.1.0"
description = ""
authors = ["Nick Landers <nick@dreadnode.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.5.0"
together = "^0.2.10"
mistralai = "^0.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
